# picking-my-time-sink

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.observability.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Next.md  data-governance.md  data-model-spec.md  documentation-style.md  metrics-definitions.md  source-inventory.md  steam-only-scheduled-pipeline-runbook.md  ticket-template.md
docs/checkpoints/: 2026-03-07_steam-ccu-first-vertical-slice-checkpoint.md  2026-03-13_steam-only-mvp-reliability-checkpoint.md
docs/decisions/: category-to-game-alias-hint-contract-gate.md  category-to-game-alias-hint-real-data-gate.md  category-to-game-alias-hint-seeding-assist-gate.md  category-to-game-candidate-generation-gate.md  category-to-game-implementation-gate.md  category-to-game-implementation-surface-review.md  category-to-game-mapping-contract.md  category-to-game-non-exact-matching-gate.md  category-to-game-real-data-proposal-smoke-gate.md  category-to-game-serving-contract-planning.md  category-to-game-storage-contract-planning.md  chzzk-coverage-freshness-audit.md  chzzk-current-aggregate-evidence-smoke.md  combined-source-view-readiness-contract.md  garage-shared-artifact-contract.md  orchestration-and-artifact-storage-direction.md  steam-ccu-observability.md
docs/evidence/: inventory-main-5215429.md
docs/runbook/: agent-workflow.md
scripts/: check-web.sh  check.sh
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+219 files in other folders)
