[project]
name = "steam-chzzk-trend-dashboard"
version = "0.1.0"
description = "Steam-only MVP first"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11,<0.12"
pytest = ">=8.0,<9.0"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"